Fixed all issues relating to the address bar not collapsing on scroll.

--- a/App/misterpea.me/styles/connect-style.scss
+++ b/App/misterpea.me/styles/connect-style.scss
@@ -25,7 +25,7 @@
     background-color: rgba(0, 0, 0, 0.001);
   }
   & .bottom {
-    flex: 2;
+    flex: 1;
   }
 
   ul {
