--- a/App/misterpea.me/styles/main-sections-style.scss
+++ b/App/misterpea.me/styles/main-sections-style.scss
@@ -3,30 +3,25 @@
   scroll-behavior: smooth;
   z-index: 3;
   top: 0;
-  height: 101vh;
+  height: 100%;
   overflow: auto;
   position: relative;
-  scrollbar-color: var(--scroll-tab) var(--scroll-track);
-  scrollbar-width: thin;
-  mask-image: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0) 95%);
-  
+
+ 
+  &::before {
+    content: '';
+    height: 150px;
+    width: 100%;
+    background: linear-gradient(0deg, var(--background-zero-opacity) 0%, var(--background) 90%);
+    position: fixed;
+    display: block;
+    z-index: 100;
+    top: 0;
+    left: 0;
+  }
   @include tablet {
     mask-image: none;
   }
-}
-
-.line-pattern {
-  height: 101vh;
-  width: 110vw;
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  // background-attachment: scroll;
-  z-index: -100;
-  background: var(--lines);
-  background-size: 13px;
-  background-repeat: repeat;
-  margin-left: -10%;
 }
 
 .section {
